<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingVertical="12dp"
    android:paddingStart="12dp"
    android:paddingEnd="12dp">

    <ImageView
        android:id="@+id/catImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/circle" />

    <TextView
        android:id="@+id/catNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/catDescriptionTextView"
        app:layout_constraintEnd_toStartOf="@id/favoriteImageView"
        app:layout_constraintStart_toEndOf="@id/catImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Cat Name" />

    <TextView
        android:id="@+id/catDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favoriteImageView"
        app:layout_constraintStart_toStartOf="@id/catNameTextView"
        app:layout_constraintTop_toBottomOf="@id/catNameTextView"
        tools:text="Some cat description here" />

    <ImageView
        android:id="@+id/deleteImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/action" />

    <ImageView
        android:id="@+id/favoriteImageView"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="12dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteImageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_favorite_not" />

</androidx.constraintlayout.widget.ConstraintLayout>