...
            tools:src="@drawable/circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/favoriteImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circle_bg"
            tools:src="@drawable/ic_favorite_not"
            app:layout_constraintEnd_toEndOf="@id/catImageView"
            app:layout_constraintBottom_toBottomOf="@id/catImageView"/>
...
            tools:text="Lorem ipsum... Some cat description here"
            app:layout_constraintTop_toBottomOf="@id/catNameTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/goBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/go_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
